--- a/.github/workflows/work_data.yml
+++ b/.github/workflows/work_data.yml
@@ -24,4 +24,8 @@ jobs:
           tags: danielcruzr/streamlit:latest
       - name: Execute o contêiner
         run: |
-          docker run -d -p 8501:8501 danielcruzr/streamlit:latest
+          docker run -d -p 8501:8501 --name stream danielcruzr/streamlit:latest
+      - name: IP do contêiner
+        run: |
+          docker inspect stream | grep IPAddress
+
